--- a/public/styles.css
+++ b/public/styles.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
 font-family: 'Overlock', cursive;
-font-size: 48px;
+font-size: 72px;
 }
 
 #header {
@@ -25,10 +25,13 @@ nav {
     display: inline;
 }
 
-.container {
+.grid {
     margin: 0 auto;
     max-width: 1200px;
-    padding: 0 1rem;
+    grid-template-rows: auto;
+    display: grid;
+    justify-items: center;
+    background-color: azure;
 }
 
 .responsive-image {
@@ -40,12 +43,14 @@ nav {
 }
 
 .cell img {
+    width: 100%;
+    height: 100%;
     display: block;
 }
 
 .cell {
     margin: 10px;
-    box-align: center;
+    display: block;
     background: -moz-linear-gradient(45deg, rgba(192,192,192,1) 0%, rgba(255,255,255,1) 50%, rgba(128,128,128,1) 100%); /* ff3.6+ */
     background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(192,192,192,1)), color-stop(50%, rgba(255,255,255,1)), color-stop(100%, rgba(128,128,128,1))); /* safari4+,chrome */
     background: -webkit-linear-gradient(45deg, rgba(192,192,192,1) 0%, rgba(255,255,255,1) 50%, rgba(128,128,128,1) 100%); /* safari5.1+,chrome10+ */
@@ -68,6 +73,30 @@ nav {
 
   @media screen and (min-width: 700px) {
     .cell {
-      width: 33%;
+      width: 25%;
     }
+}
+
+#navigation {
+    width: 100%;
+    text-align: center;
+    padding: 50px;
+    margin: 0 auto;
+}
+
+.mainnav {
+    font-family: 'Overlock', cursive;
+    font-size: 36px;
+}
+
+.mainnav a {
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    padding: 15px;
+}
+
+.mainnav a:hover {
+    color: darkblue;
+    background-color: aliceblue;
 }
