--- a/public/styles.css
+++ b/public/styles.css
@@ -12,6 +12,10 @@ font-family: 'Overlock', cursive;
 font-size: 72px;
 }
 
+p {
+    margin: 50px;
+}
+
 #header {
     display: grid;
     text-align: center;
@@ -30,8 +34,7 @@ nav {
     max-width: 1200px;
     grid-template-rows: auto;
     display: grid;
-    justify-items: center;
-    background-color: azure;
+    justify-content: center;
 }
 
 .responsive-image {
@@ -50,6 +53,7 @@ nav {
 
 .cell {
     margin: 10px;
+    border-radius: 5px;
     display: block;
     background: -moz-linear-gradient(45deg, rgba(192,192,192,1) 0%, rgba(255,255,255,1) 50%, rgba(128,128,128,1) 100%); /* ff3.6+ */
     background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(192,192,192,1)), color-stop(50%, rgba(255,255,255,1)), color-stop(100%, rgba(128,128,128,1))); /* safari4+,chrome */
@@ -71,7 +75,7 @@ nav {
     }
 }
 
-  @media screen and (min-width: 700px) {
+  @media screen and (min-width: 900px) {
     .cell {
       width: 25%;
     }
@@ -99,4 +103,33 @@ nav {
 .mainnav a:hover {
     color: darkblue;
     background-color: aliceblue;
+}
+#searchAssets {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    padding: 15px;
+}
+#search-drawers {
+    margin: 0 auto;
+    width: 100%;
+    padding: 15px;
+    text-align: center;
+    justify-items: center;
+    font-size: 18px;
+    border-radius: 5px;
+    border-style: 2px solid black;
+}
+
+button {
+    display: inline;
+
+}
+
+input {
+    width: 50%;
+}
+
+legend, label {
+    display: none;
 }
