--- a/public/styles.css
+++ b/public/styles.css
@@ -125,7 +125,9 @@ ul li {
 .dropdown-content a:hover {
     background-color: aliceblue;
     color: black;
+    border: none;
 }
+
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -190,6 +192,7 @@ button:hover {
     max-width: 1200px;
     margin: 0 auto;
     padding: 50px 0;
+    background-color: rgba(0,0,0,0.5);
 }
   
 .addChild * {
@@ -242,9 +245,10 @@ button:hover {
 .flex-outer li label,
 .flex-outer li p {
     padding: 18px;
-    font-weight: 300;
-    letter-spacing: .09em;
+    font-size: 36px;
     text-transform: uppercase;
+    text-align: center;
+    color: black;
 }
   
 .flex-outer > li > label,
@@ -272,6 +276,50 @@ button:hover {
     letter-spacing: .09em;
     font-family: 'Open Sans', sans-serif;
     border-radius: 5px;
+}
+
+#childoverlay {
+    position: fixed; 
+    display: none;
+    width: 100%; 
+    height: 100%; 
+    top: 0; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); 
+    z-index: 2; 
+    cursor: pointer; 
+}
+
+#first-name { 
+    padding: 10px;
+    margin-top: 5px;
+    font-size: 18px;
+    border: 0px solid aliceblue;
+    border-radius: 5px 0px 0px 5px;
+    background-color: aliceblue;
+    width: 300px;
+}
+
+#birth-date { 
+    padding: 10px;
+    margin-top: 5px;
+    font-size: 18px;
+    border: 0px solid aliceblue;
+    border-radius: 5px 0px 0px 5px;
+    background-color: aliceblue;
+    width: 300px;
+}
+
+#date-uploaded { 
+    padding: 10px;
+    margin-top: 5px;
+    font-size: 18px;
+    border: 0px solid aliceblue;
+    border-radius: 5px 0px 0px 5px;
+    background-color: aliceblue;
+    width: 300px;
 }
 
 #childoverlay {
@@ -321,7 +369,6 @@ button:hover {
     top: 50%;
     left: 50%;
     font-size: 50px;
-    color: white;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
     z-index: 2;
@@ -406,7 +453,7 @@ button:hover {
 
 @media screen and (max-width: 825px) {
     .topnav li {display: none;} 
-    .topnav .icon {
+    .topnav .icon li {
         color: aliceblue;
         float: left;
         display: block;
@@ -415,7 +462,7 @@ button:hover {
 
 @media screen and (max-width: 825px) {
     .topnav.responsive {position: relative;}
-    .topnav.responsive .icon li {
+    .topnav.responsive li.icon {
         color: aliceblue;
         position: absolute;
         left: 0;
