--- a/public/styles.css
+++ b/public/styles.css
@@ -57,6 +57,7 @@ ul li {
     margin: 10px;
     border-radius: 5px;
     display: block;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     background: -moz-linear-gradient(45deg, rgba(192,192,192,1) 0%, rgba(255,255,255,1) 50%, rgba(128,128,128,1) 100%); /* ff3.6+ */
     background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(192,192,192,1)), color-stop(50%, rgba(255,255,255,1)), color-stop(100%, rgba(128,128,128,1))); /* safari4+,chrome */
     background: -webkit-linear-gradient(45deg, rgba(192,192,192,1) 0%, rgba(255,255,255,1) 50%, rgba(128,128,128,1) 100%); /* safari5.1+,chrome10+ */
@@ -121,7 +122,8 @@ ul li {
 .topnav .search-container button:hover {
     background: aliceblue;
     color: black;
-} 
+}
+
 
 .dropdown-content {
     display: none;
@@ -130,7 +132,7 @@ ul li {
     background-color:black;
     color: aliceblue;
     border: 1px solid black;
-    min-width: 160px;
+    min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -149,6 +151,7 @@ ul li {
     background-color: aliceblue;
     color: black;
     border: none;
+    display: block;
 }
 
 
