--- a/public/styles.css
+++ b/public/styles.css
@@ -67,7 +67,7 @@ ul li {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#808080', endColorstr='#c0c0c0',GradientType=1 ); /* ie6-9 */ 
 }
 
-/* Navigation */
+/*////////////Navigation//////////*/
 
 .topnav {
     overflow: hidden;
@@ -159,14 +159,22 @@ ul li {
     display: block;
 }
 
-/* Form Styling */
-
+/*////////////Form Styling//////////*/
+form {
+    text-align: center;
+}
 .addChild {
-    width: 80%;
+    width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 50px 0;
+    padding: 50px 50px;
     background-color: rgba(0,0,0,0.5);
+}
+
+.form-title {
+    font-size: 36px;
+    color: aliceblue;
+    text-align: center;
 }
   
 .addChild * {
@@ -177,7 +185,8 @@ ul li {
     width: 80%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 50px 0;
+    padding: 50px 50px;
+    background-color: rgba(0,0,0,0.5);
 }
   
 .uploadAsset * {
@@ -188,7 +197,8 @@ ul li {
     width: 80%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 50px 0;
+    padding: 50px 50px;
+    background-color: rgba(0,0,0,0.5);
 }
   
 .addDrawer * {
@@ -222,7 +232,7 @@ ul li {
     font-size: 36px;
     text-transform: uppercase;
     text-align: center;
-    color: black;
+    color: aliceblue;
 }
   
 .flex-outer > li > label,
@@ -249,24 +259,11 @@ ul li {
     font-size: 18px;
     letter-spacing: .09em;
     font-family: 'Open Sans', sans-serif;
-    border-radius: 5px;
 }
 
-#childoverlay {
-    position: fixed; 
-    display: none;
-    width: 100%; 
-    height: 100%; 
-    top: 0; 
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.5); 
-    z-index: 2; 
-    cursor: pointer; 
-}
+/*////////////Overlay Styling//////////*/
 
-#first-name { 
+#first-name {
     padding: 10px;
     margin-top: 5px;
     font-size: 18px;
@@ -353,10 +350,9 @@ ul li {
     top: 50%;
     left: 50%;
     font-size: 50px;
-    color: white;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
-    z-index: 3;
+    z-index: 2;
 }
 
 #addDrawerForm{
@@ -364,16 +360,14 @@ ul li {
     top: 50%;
     left: 50%;
     font-size: 50px;
-    color: white;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
-    z-index: 4;
+    z-index: 2;
 }
 
+/*////////////////Footer//////////////////*/
 
-/* Footer */
-
-/*  Responsive Styling */
+/*////////////Responsive Styling//////////*/
 
 @media screen and (min-width: 600px) {
     .grid {
