--- a/public/styles.css
+++ b/public/styles.css
@@ -365,6 +365,53 @@ form {
     z-index: 2;
 }
 
+
+/*////////////Child and Drawer Tabbed View//////////*/
+
+.tab {
+    float: left;
+    background-color:black;
+    color: aliceblue;
+    width: 15%;
+    height: 300px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.tab button {
+    display: block;
+    background-color: inherit;
+    color: aliceblue;
+    padding: 22px 16px;
+    width: 100%;
+    border: none;
+    outline: none;
+    text-align: left;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+.tab button:hover {
+    background-color: black;
+    color: aliceblue;
+}
+
+.tab button.active {
+    color: black;
+    background-color:aliceblue;
+    border-right: none;
+    box-shadow: none;
+    
+}
+
+.tabcontent {
+    float: left;
+    padding: 0px 12px;
+    width: 85%;
+    border-left: none;
+    height: 300px;
+}
+
 /*////////////////Footer//////////////////*/
 
 /*////////////Responsive Styling//////////*/
