--- a/public/styles.css
+++ b/public/styles.css
@@ -365,51 +365,42 @@ form {
     z-index: 2;
 }
 
-
 /*////////////Child and Drawer Tabbed View//////////*/
 
 .tab {
-    float: left;
-    background-color:black;
+    overflow: hidden;
+    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+    background-color: slategray;
     color: aliceblue;
-    width: 15%;
-    height: 300px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .tab button {
-    display: block;
     background-color: inherit;
+    font-size: 16px;
     color: aliceblue;
-    padding: 22px 16px;
-    width: 100%;
+    float: left;
     border: none;
     outline: none;
-    text-align: left;
     cursor: pointer;
+    padding: 14px 16px;
     transition: 0.3s;
-    font-size: 17px;
 }
 
 .tab button:hover {
-    background-color: black;
-    color: aliceblue;
+    background-color: aliceblue;
+    color: black;
 }
 
 .tab button.active {
+    background-color: aliceblue;
     color: black;
-    background-color:aliceblue;
-    border-right: none;
-    box-shadow: none;
-    
 }
 
 .tabcontent {
-    float: left;
-    padding: 0px 12px;
-    width: 85%;
-    border-left: none;
-    height: 300px;
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
 }
 
 /*////////////////Footer//////////////////*/
