--- a/public/styles.css
+++ b/public/styles.css
@@ -175,6 +175,7 @@ form {
     font-size: 36px;
     color: aliceblue;
     text-align: center;
+    text-transform: uppercase;
 }
   
 .addChild * {
@@ -229,7 +230,7 @@ form {
 .flex-outer li label,
 .flex-outer li p {
     padding: 18px;
-    font-size: 36px;
+    font-size: 24px;
     text-transform: uppercase;
     text-align: center;
     color: aliceblue;
@@ -254,10 +255,11 @@ form {
     padding: 8px 16px;
     width: 100%;
     border: none;
-    background:black;
-    color: aliceblue;
-    font-size: 18px;
+    background:aliceblue;
+    color: black;
+    font-size: 24px;
     letter-spacing: .09em;
+    text-transform: uppercase;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -402,6 +404,11 @@ form {
     border: 1px solid #ccc;
     border-top: none;
 }
+
+.tabcontent h2 {
+   margin-left: 40px;
+}
+
 
 /*////////////////Footer//////////////////*/
 
