--- a/public/styles.css
+++ b/public/styles.css
@@ -588,10 +588,6 @@ form {
 .dropdown-asset {
     position: relative;
     display: inline-block;
-}
-
-.dropdown-asset {
-    position: absolute;
     margin-left: 60px;
     min-width: 160px;
     z-index: 1;
@@ -610,6 +606,32 @@ form {
 .dropdown-asset a:hover {
     background-color: #ddd
 }
+
+.dropdown-asset button:hover {
+    background-color: #ddd
+}
+
+.dropdown-editAsset {
+    display: none;
+    position: absolute;
+    margin-top: -50px;
+    margin-left: 60px;
+    min-width: 160px;
+    z-index: 1;
+}
+
+.dropdown-editAsset a {
+    color: slategray;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    float: right;
+}
+
+.dropdown-editAsset a:hover {
+    background-color: #ddd
+}
+
 
 .show {
     display: block;
