--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0 auto;
-    background-color: aliceblue;
+    background-color: whitesmoke;
 }
 
 h1 {
@@ -78,7 +78,7 @@ ul li {
 .topnav a {
     /* float: left; */
     display: block;
-    color: aliceblue;
+    color:whitesmoke;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -86,13 +86,13 @@ ul li {
 }
   
 .topnav a:hover {
-    background-color: aliceblue;
+    background-color:whitesmoke;
     color: black;
 }
   
 .topnav a.active {
     background-color: rgb(11, 135, 243);
-    color: aliceblue;
+    color: whitesmoke;
 }
   
 .topnav .search-container {
@@ -104,7 +104,7 @@ ul li {
     margin-top: 8px;
     font-size: 17px;
     border: none;
-    background-color: aliceblue;
+    background-color: whitesmoke;
 }
   
 .topnav .search-container button {
@@ -113,14 +113,14 @@ ul li {
     margin-top: 8px;
     margin-right: 16px;
     background: black;
-    color: aliceblue;
+    color:whitesmoke;
     font-size: 17px;
     border: none;
     cursor: pointer;
 }
   
 .topnav .search-container button:hover {
-    background: aliceblue;
+    background:whitesmoke;
     color: black;
 }
 
@@ -147,7 +147,7 @@ ul li {
     display: none;
     position: absolute;
     background-color:black;
-    color: aliceblue;
+    color: whitesmoke;
     border: 1px solid black;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -156,17 +156,17 @@ ul li {
 
 .dropdown-content a {
     background-color: black;
-    color: aliceblue;
+    color:whitesmoke;
     padding: 12px 16px;
     text-decoration: none;
-    border-color: aliceblue;
+    border-color: whitesmoke;
     display: block;
     text-align: left;
     float: none;
 }
 
 .dropdown-content a:hover {
-    background-color: aliceblue;
+    background-color: whitesmoke;
     color: black;
     border: none;
     display: block;
@@ -199,7 +199,7 @@ form {
 
 .form-title {
     font-size: 36px;
-    color: aliceblue;
+    color: whitesmoke;
     text-align: center;
     text-transform: uppercase;
 }
@@ -259,7 +259,7 @@ form {
     font-size: 24px;
     text-transform: uppercase;
     text-align: center;
-    color: aliceblue;
+    color: whitesmoke;
 }
   
 .flex-outer > li > label,
@@ -281,7 +281,7 @@ form {
     padding: 8px 16px;
     width: 100%;
     border: none;
-    background:aliceblue;
+    background:whitesmoke;
     color: black;
     font-size: 24px;
     letter-spacing: .09em;
@@ -295,8 +295,8 @@ form {
     padding: 10px;
     margin-top: 5px;
     font-size: 18px;
-    border: 0px solid aliceblue;
-    background-color: aliceblue;
+    border: 0px solid whitesmoke;
+    background-color: whitesmoke;
     width: 400px;
 }
 
@@ -304,8 +304,8 @@ form {
     padding: 10px;
     margin-top: 5px;
     font-size: 18px;
-    border: 0px solid aliceblue;
-    background-color: aliceblue;
+    border: 0px solid whitesmoke;
+    background-color: whitesmoke;
     width: 400px;
 }
 
@@ -313,8 +313,8 @@ form {
     padding: 10px;
     margin-top: 5px;
     font-size: 18px;
-    border: 0px solid aliceblue;
-    background-color: aliceblue;
+    border: 0px solid whitesmoke;
+    background-color: whitesmoke;
     width: 400px;
 }
 
@@ -322,8 +322,8 @@ form {
     padding: 10px;
     margin-top: 5px;
     font-size: 18px;
-    border: 0px solid aliceblue;
-    background-color: aliceblue;
+    border: 0px solid whitesmoke;
+    background-color: whitesmoke;
     width: 400px;
 }
 
@@ -331,8 +331,8 @@ form {
     padding: 10px;
     margin-top: 5px;
     font-size: 18px;
-    border: 0px solid aliceblue;
-    background-color: aliceblue;
+    border: 0px solid whitesmoke;
+    background-color: whitesmoke;
     width: 400px;
 }
 
@@ -340,8 +340,8 @@ form {
     padding: 10px;
     margin-top: 5px;
     font-size: 18px;
-    border: 0px solid aliceblue;
-    background-color: aliceblue;
+    border: 0px solid whitesmoke;
+    background-color: whitesmoke;
     width: 400px;
 }
 
@@ -349,8 +349,8 @@ form {
     padding: 10px;
     margin-top: 5px;
     font-size: 18px;
-    border: 0px solid aliceblue;
-    background-color: aliceblue;
+    border: 0px solid whitesmoke;
+    background-color: whitesmoke;
     width: 400px;
 }
 
@@ -358,8 +358,8 @@ form {
     padding: 10px;
     margin-top: 5px;
     font-size: 18px;
-    border: 0px solid aliceblue;
-    background-color: aliceblue;
+    border: 0px solid whitesmoke;
+    background-color: whitesmoke;
     width: 400px;
 }
 
@@ -367,8 +367,8 @@ form {
     padding: 10px;
     margin-top: 5px;
     font-size: 18px;
-    border: 0px solid aliceblue;
-    background-color: aliceblue;
+    border: 0px solid whitesmoke;
+    background-color: whitesmoke;
     width: 400px;
 }
 
@@ -376,8 +376,8 @@ form {
     padding: 10px;
     margin-top: 5px;
     font-size: 18px;
-    border: 0px solid aliceblue;
-    background-color: aliceblue;
+    border: 0px solid whitesmoke;
+    background-color: whitesmoke;
     width: 400px;
 }
 
@@ -386,8 +386,8 @@ select {
     margin-top: 5px;
     font-size: 18px;
     color: gray;
-    border: 0px solid aliceblue;
-    background-color: aliceblue;
+    border: 0px solid whitesmoke;
+    background-color: whitesmoke;
     width: 400px;
 }
 
@@ -396,8 +396,8 @@ select {
     margin-top: 5px;
     font-size: 18px;
     color: gray;
-    border: 0px solid aliceblue;
-    background-color: aliceblue;
+    border: 0px solid whitesmoke;
+    background-color: whitesmoke;
     width: 400px;
 }
 
@@ -501,7 +501,7 @@ select {
 
 .tab {
     /* overflow: hidden; */
-    background-color: aliceblue;
+    background-color: whitesmoke;
     color: black;
     margin: 60px; 
     /* width: 80%; */
@@ -510,7 +510,7 @@ select {
 .tab button {
     background-color: slategray;
     font-size: 16px;
-    color: aliceblue;
+    color: whitesmoke;
     float: left;
     border: none;
     outline: none;
@@ -520,18 +520,18 @@ select {
 }
 
 .tab button:hover {
-    background-color: aliceblue;
+    background-color: whitesmoke;
     color: black;
 }
 
 .tab button.active {
     background-color: black;
-    color: aliceblue;
+    color: whitesmoke;
 }
 
 .tabcontent {
     display: none;
-    background-color: aliceblue;
+    background-color: whitesmoke;
     color: black;
     padding: 12px 12px;
     border: 1px solid #ccc;
@@ -540,7 +540,7 @@ select {
 
 .displayTabcontent {
     display: none;
-    background-color: aliceblue;
+    background-color: whitesmoke;
     color: black;
     padding: 12px 12px;
     border: 1px solid #ccc;
@@ -549,7 +549,7 @@ select {
 
 .assettabcontent {
     display: none;
-    background-color: aliceblue;
+    background-color: whitesmoke;
     color: black;
     margin-top: 30px;
     padding: 12px 12px;
